--- a/Repository Layer/Repository Layer.csproj
+++ b/Repository Layer/Repository Layer.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20220405035142_CollabFunction.cs" />
+    <Compile Remove="Migrations\20220405035142_CollabFunction.Designer.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.17.0" />
     <PackageReference Include="DocumentFormat.OpenXml" Version="2.16.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="3.1.0" />
